--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@material/button": "^0.34.1",
         "@material/checkbox": "^0.34.1",
+        "@material/dialog": "^0.35.0",
         "@material/form-field": "^0.34.1",
         "@material/icon-toggle": "^0.34.1",
         "@material/layout-grid": "^0.34.0",
