--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "start": "webpack-dev-server"
+        "start": "webpack-dev-server",
+        "build": "webpack"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
